# scarlett-mixer

./: README.md  app.py  backend.py  pyproject.toml  server.py
ui/: Main.qml
web/: app.js  index.html
